--- a/app/src/main/res/layout/plan_all_info.xml
+++ b/app/src/main/res/layout/plan_all_info.xml
@@ -2,11 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <include layout="@layout/toolbar"/>
+
+
     <TextView
         android:layout_gravity="center|top"
         android:textAlignment="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
         android:text="@string/info_about_plan"
         android:layout_marginBottom="30dp"/>
@@ -15,6 +20,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
         android:text="@string/title"/>
 
     <EditText
@@ -27,6 +33,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
         android:text="@string/description"/>
 
     <EditText
@@ -35,7 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
-        android:lines="3"/>
+        android:lines="2"/>
 
     <Button
         android:id="@+id/confirmButton"
