--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,8 +5,13 @@
         <!-- Customize your theme here. -->
         <item name="android:background">#fff</item>
         <item name="android:panelColorBackground">#fff</item>
+        <item name="android:colorAccent">@color/accent_device_default_light</item>
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item>
+        <item name="android:colorPrimary">@color/primary_device_default_light</item>
+        <item name="android:colorPrimaryDark">@color/primary_dark_device_default_light</item>
         <!--<item name="android:toolbarStyle">@style/AppTheme.Toolbar</item>-->
         <!--<item name="android:textColor">#000000</item>-->
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <!--<style name="AppTheme.Toolbar" parent="android:Theme.Material.Light">-->
